[tool.poetry]
name = "autoload-module"
version = "1.7.2"
description = "Python Autoload Module"
authors = ["Hiroki Miyaji <nukoprogramming@gmail.com>"]
license = "MIT"
maintainers = ["Hiroki Miyaji <nukoprogramming@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hiroki0525/autoload_module"
repository = "https://github.com/hiroki0525/autoload_module"
documentation = "https://github.com/hiroki0525/autoload_module"
keywords = ["python", "import", "autoload", "autoload_module", "metaprogramming", "dynamic import"]
classifiers = [
    'Topic :: Software Development :: Libraries',
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
]
packages = [
    { include = "autoload" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b1"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
